feat(atualização do projeto) Adicionar atualização do projeto com classes DAO e layouts atualizados

--- a/MeusPilas/app/src/main/res/layout/income_activity.xml
+++ b/MeusPilas/app/src/main/res/layout/income_activity.xml
@@ -10,9 +10,16 @@
         android:layout_height="wrap_content"
         android:id="@+id/spIncome"/>
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <include layout="@layout/activity_salary"/>
+    </ScrollView>
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <include layout="@layout/activity_loans"/>
-
+    </ScrollView>
 
 </LinearLayout>
