--- a/MeusPilas/app/src/main/res/layout/activity_login.xml
+++ b/MeusPilas/app/src/main/res/layout/activity_login.xml
@@ -32,6 +32,14 @@
         android:text="@string/button_login"
         android:textSize="15sp"/>
 
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="3dp"
+        android:id="@+id/button_create_account"
+        android:text="@string/button_create_account"
+        android:textSize="15sp"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
