Adicionar Loan - Adicionar layout para FixedAccount e VariableAccount

--- a/MeusPilas/app/src/main/res/layout/activity_entry_main.xml
+++ b/MeusPilas/app/src/main/res/layout/activity_entry_main.xml
@@ -37,6 +37,7 @@
             android:id="@+id/btTransfer"
             android:text="@string/btTransfer"
             android:textSize="15sp"
+            android:visibility="gone"
             style="?android:attr/buttonBarButtonStyle"/>
     </LinearLayout>
 
