--- a/MeusPilas/app/src/main/res/layout/activity_outcome.xml
+++ b/MeusPilas/app/src/main/res/layout/activity_outcome.xml
@@ -10,10 +10,17 @@
         android:layout_height="wrap_content"
         android:id="@+id/spOutcome"/>
 
-    <LinearLayout
-        android:layout_width="fill_parent"
+    <ScrollView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-        <!-- TODO:Outcome-->
-    </LinearLayout>
+                <include layout="@layout/activity_fixed_account"/>
+
+                <include layout="@layout/activity_variable_account"/>
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
